--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/th2"
+    tools:context="com.iloveallah.itsharks.ui.ContactActivity">
 
-    >
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+    <ru.dimorinny.floatingtextbutton.FloatingTextButton
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.iloveallah.itsharks.contact">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/address"
-            android:textColorHint="@color/white"
-            android:textSize="35sp" />
+        android:layout_gravity="center"
+        app:floating_left_icon="@drawable/location"
+        app:floating_title="@string/location"
+        app:floating_background_color="@android:color/transparent"
+        app:floating_title_color="@color/gray"
+        />
 
         <TextView
             android:layout_width="match_parent"
@@ -30,115 +29,261 @@
             android:hint="@string/address_value"
             android:textColorHint="@color/white"
 
-            android:textSize="25sp"
             android:gravity="center_vertical"
             android:layout_marginTop="15sp"
             android:layout_marginBottom="15sp"
             android:id="@+id/address" />
 
-        <TextView
+
+
+        <ru.dimorinny.floatingtextbutton.FloatingTextButton
+            android:id="@+id/phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/mobile"
-            android:textColorHint="@color/white"
+            app:floating_left_icon="@drawable/phone"
+            app:floating_title="@string/phone1"
+            app:floating_background_color="@android:color/transparent"
+            app:floating_title_color="@color/gray"
 
-            android:textSize="35sp" />
+            />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ru.dimorinny.floatingtextbutton.FloatingTextButton
+            android:id="@+id/whats"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/mobile"
-                android:layout_width="0dp"
-                android:layout_height="50sp"
+            app:floating_left_icon="@drawable/whatsapp"
+            app:floating_title="@string/phone2"
+            app:floating_background_color="@android:color/transparent"
+            app:floating_title_color="@color/gray"            />
 
-                android:layout_marginBottom="15sp"
-                android:layout_marginTop="15sp"
-                android:layout_weight="3"
-                android:gravity="center_vertical"
-                android:textColor="@color/white"
-                android:textSize="25sp" />
-
-            <Button
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:id="@+id/phone"
-                android:background="@drawable/telephone" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ru.dimorinny.floatingtextbutton.FloatingTextButton
+            android:id="@+id/mail"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="50sp"
-                android:textColor="@color/white"
-
-                android:textSize="25sp"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15sp"
-                android:layout_marginBottom="15sp"
-                android:layout_weight="3"
-                android:id="@+id/mobile2" />
-
-            <Button
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:id="@+id/phone2"
-                android:background="@drawable/telephone" />
-        </LinearLayout>
+            app:floating_left_icon="@drawable/mail"
+            app:floating_title="@string/mail"
+            app:floating_background_color="@android:color/transparent"
+            app:floating_title_color="@color/gray"            />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/mobile3"
-                android:layout_width="0dp"
-
-                android:layout_height="50sp"
-                android:layout_marginBottom="15sp"
-                android:layout_marginTop="15sp"
-                android:layout_weight="3"
-                android:gravity="center_vertical"
-                android:textColor="@color/white"
-                android:textSize="25sp" />
-
-            <Button
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:id="@+id/phone3"
-                android:background="@drawable/telephone" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:layout_gravity="bottom|center"
             android:orientation="horizontal">
+
 
             <ImageButton
-                android:layout_width="70sp"
-                android:layout_height="70sp"
+                android:layout_width="60sp"
+                android:layout_height="60sp"
+                android:id="@+id/google"
+                android:contentDescription="@string/google"
+                android:background="@drawable/google" />
+            <ImageButton
+                android:layout_width="60sp"
+                android:layout_height="60sp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:id="@+id/face"
                 android:contentDescription="@string/face"
-                android:layout_marginRight="50sp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="100sp"
                 android:background="@drawable/face" />
 
             <ImageButton
-                android:layout_width="70sp"
-                android:layout_height="70sp"
-                android:id="@+id/google"
+                android:layout_width="60sp"
+                android:layout_height="60sp"
+                android:id="@+id/yotube"
                 android:contentDescription="@string/google"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/google" />
+                android:background="@drawable/youtube" />
+
 
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
+
+
+<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/detail_content"-->
+    <!--android:background="@drawable/th2"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fitsSystemWindows="true">-->
+
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/appbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/app_bar_height"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
+
+        <!--<android.support.design.widget.CollapsingToolbarLayout-->
+            <!--android:id="@+id/collapsing_toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark"-->
+            <!--app:contentScrim="?attr/colorPrimary"-->
+            <!--app:expandedTitleMarginEnd="@dimen/article_keylines"-->
+            <!--app:expandedTitleMarginStart="@dimen/md_keylines"-->
+            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
+
+            <!--<ImageView-->
+                <!--android:id="@+id/image"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--tools:background="@drawable/itsharks"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--android:scaleType="centerCrop"-->
+                <!--app:layout_collapseMode="parallax" />-->
+
+            <!--<android.support.v7.widget.Toolbar-->
+                <!--android:id="@+id/toolbar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="?attr/actionBarSize"-->
+                <!--app:layout_collapseMode="pin"-->
+                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
+
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+    <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="vertical"-->
+            <!--android:paddingLeft="@dimen/article_keylines"-->
+            <!--android:paddingRight="@dimen/md_keylines"-->
+            <!--android:paddingTop="@dimen/md_keylines">-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/address"-->
+            <!--android:textColorHint="@color/white"-->
+            <!--android:textSize="35sp" />-->
+
+            <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/address_value"-->
+            <!--android:textColorHint="@color/white"-->
+
+            <!--android:textSize="25sp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:layout_marginTop="15sp"-->
+            <!--android:layout_marginBottom="15sp"-->
+            <!--android:id="@+id/address" />-->
+
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/mobile"-->
+            <!--android:textColorHint="@color/white"-->
+
+            <!--android:textSize="35sp" />-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/mobile"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="50sp"-->
+
+            <!--android:layout_marginBottom="15sp"-->
+            <!--android:layout_marginTop="15sp"-->
+            <!--android:layout_weight="3"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="25sp" />-->
+
+            <!--<Button-->
+            <!--android:layout_width="60sp"-->
+            <!--android:layout_height="60sp"-->
+            <!--android:id="@+id/phone"-->
+            <!--android:background="@drawable/telephone" />-->
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="50sp"-->
+            <!--android:textColor="@color/white"-->
+
+            <!--android:textSize="25sp"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:layout_marginTop="15sp"-->
+            <!--android:layout_marginBottom="15sp"-->
+            <!--android:layout_weight="3"-->
+            <!--android:id="@+id/mobile2" />-->
+
+            <!--<Button-->
+            <!--android:layout_width="60sp"-->
+            <!--android:layout_height="60sp"-->
+            <!--android:id="@+id/phone2"-->
+            <!--android:background="@drawable/telephone" />-->
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/mobile3"-->
+            <!--android:layout_width="0dp"-->
+
+            <!--android:layout_height="50sp"-->
+            <!--android:layout_marginBottom="15sp"-->
+            <!--android:layout_marginTop="15sp"-->
+            <!--android:layout_weight="3"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="25sp" />-->
+
+            <!--<Button-->
+            <!--android:layout_width="60sp"-->
+            <!--android:layout_height="60sp"-->
+            <!--android:id="@+id/phone3"-->
+            <!--android:background="@drawable/telephone" />-->
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<ImageButton-->
+            <!--android:layout_width="70sp"-->
+            <!--android:layout_height="70sp"-->
+            <!--android:id="@+id/face"-->
+            <!--android:contentDescription="@string/face"-->
+            <!--android:layout_marginRight="50sp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_marginLeft="100sp"-->
+            <!--android:background="@drawable/face" />-->
+
+            <!--<ImageButton-->
+            <!--android:layout_width="70sp"-->
+            <!--android:layout_height="70sp"-->
+            <!--android:id="@+id/google"-->
+            <!--android:contentDescription="@string/google"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:background="@drawable/google" />-->
+
+            <!--</LinearLayout>-->
+
+        <!--</LinearLayout>-->
+    <!--</android.support.v4.widget.NestedScrollView>-->
+<!--</android.support.design.widget.CoordinatorLayout>-->
