--- a/app/src/main/res/layout/activity_review_tabs.xml
+++ b/app/src/main/res/layout/activity_review_tabs.xml
@@ -5,10 +5,7 @@
     android:background="@drawable/th2"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     android:orientation="vertical"
     tools:context="com.iloveallah.itsharks.ui.CourseInfoAndContentActivity">
 
@@ -18,8 +15,9 @@
         android:layout_height="wrap_content"
         android:padding="15sp"
         android:id="@+id/tab"
-        app:tabTextColor="#fff"
-        app:tabSelectedTextColor="#fff"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="@color/black"
+        app:tabSelectedTextColor="@color/white"
 
         ></android.support.design.widget.TabLayout>
 
