--- a/app/src/main/res/layout/add_review_fragment.xml
+++ b/app/src/main/res/layout/add_review_fragment.xml
@@ -13,61 +13,98 @@
     tools:context="com.iloveallah.itsharks.ui.AddReviewFragment">
 
     <EditText
+        android:id="@+id/your_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/your_name"
+        android:layout_margin="10dp"
+        android:padding="15dp"
+        android:background="@drawable/shapename"
+        android:drawableLeft="@drawable/ic_person_black_24dp"
+        android:drawablePadding="10dp"
         android:hint="@string/Yourname"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
         android:gravity="center"
-        android:textSize="30sp"
-        android:layout_marginTop="20sp"
-        android:layout_weight="1" />
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textColorHighlight="@color/white"/>
+    <!--<EditText-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/your_name"-->
+    <!--android:hint="@string/Yourname"-->
+    <!--android:textColorHint="@color/white"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:gravity="center"-->
+    <!--android:textSize="30sp"-->
+    <!--android:layout_marginTop="20sp"-->
+    <!--android:layout_weight="1" />-->
 
     <EditText
+        android:id="@+id/course_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/course_name"
+        android:layout_margin="10dp"
+        android:padding="15dp"
+        android:background="@drawable/shapename"
+        android:drawableLeft="@drawable/course_name"
+        android:drawablePadding="10dp"
         android:hint="@string/Coursename"
         android:gravity="center"
-        android:textSize="30sp"
-        android:textColorHint="@color/white"
         android:textColor="@color/white"
-        android:layout_marginTop="20sp"
-        android:layout_weight="1"
+        android:textColorHint="@color/white"
+        android:textColorHighlight="@color/white"/>
 
-        />
+    <!--<EditText-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/course_name"-->
+    <!--android:hint="@string/Coursename"-->
+    <!--android:gravity="center"-->
+    <!--android:textSize="30sp"-->
+    <!--android:textColorHint="@color/white"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:layout_marginTop="20sp"-->
+    <!--android:layout_weight="1"-->
+
+    <!--/>-->
 
     <EditText
+        android:id="@+id/your_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/your_review"
+        android:layout_margin="10dp"
+        android:padding="15dp"
+        android:background="@drawable/shapename"
+        android:drawableLeft="@drawable/your_review"
+        android:drawablePadding="10dp"
         android:hint="@string/YourReview"
         android:gravity="center"
-        android:textSize="30sp"
-        android:textColorHint="@color/white"
         android:textColor="@color/white"
-        android:layout_marginTop="20sp"
-        android:layout_weight="2"
+        android:textColorHint="@color/white"
+        android:textColorHighlight="@color/white"/>
 
-        />
+    <!--<EditText-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/your_review"-->
+    <!--android:hint="@string/YourReview"-->
+    <!--android:gravity="center"-->
+    <!--android:textSize="30sp"-->
+    <!--android:textColorHint="@color/white"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:layout_marginTop="20sp"-->
+    <!--android:layout_weight="2"-->
+
+    <!--/>-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add"
-        android:layout_width="80sp"
-        android:layout_height="80sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="button"
-        android:src="@drawable/fab_add"
-        android:contentDescription="@string/add_review"
-        app:backgroundTint="@color/pink"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:fabSize="normal"
-        app:pressedTranslationZ="12dp"
+        android:src="@drawable/add"
+        android:background="@drawable/shapename"
+                />
 
-        />
+
+
 </LinearLayout>
