--- a/app/src/main/res/layout/courses_row.xml
+++ b/app/src/main/res/layout/courses_row.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="40sp"
 
-    android:layout_marginRight="40sp"
 
     >
+    <android.support.v7.widget.CardView
+    tools:style="@style/CardView"
+    android:id="@+id/card_view"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/colorPrimary"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardElevation="5dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardMaxElevation="1dp"
+    card_view:cardPreventCornerOverlap="false"
+
+    >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150sp"
@@ -19,12 +37,14 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_height="50dp"
         android:id="@+id/course_name"
-        android:textSize="30sp"
-        android:textColor="#fff"
-        android:layout_marginTop="10sp"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_marginTop="15dp"
 
         android:gravity="center" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
