--- a/app/src/main/res/layout/instructors_row.xml
+++ b/app/src/main/res/layout/instructors_row.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardElevation="5dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardMaxElevation="1dp"
+    card_view:cardPreventCornerOverlap="false"
+    card_view:cardBackgroundColor="@color/white"
+
+
+    >
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="40sp"
 
-    android:layout_marginRight="40sp"
 
     >
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200sp"
+        android:layout_marginTop="15dp"
         android:contentDescription="@string/instructor_image"
         android:id="@+id/instructor_imaage" />
 
@@ -20,7 +37,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/instructor_name"
         android:textSize="30sp"
-        android:textColor="#fff"
+        android:textColor="@color/colorPrimary"
         android:layout_marginTop="10sp"
         android:gravity="center" />
 
@@ -28,9 +45,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/course_name"
-        android:textSize="30sp"
-        android:textColor="#fff"
-
-        android:layout_marginTop="10sp"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimary"
+android:layout_marginBottom="15dp"
+        android:layout_marginTop="5sp"
         android:gravity="center" />
 </LinearLayout>
+    </android.support.v7.widget.CardView>
